--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </li>
               <li> <a href="#">Developers </a>
                 <ul class="nav-dropdown">
-                  <li><a href="https://github.com/OshTech/OshTech" target="_blank"> Source Code </a></li>
+                  <li><a href="https://github.com/gavbdheiver/anomaly-detection" target="_blank"> Source Code </a></li>
                   <li><a href="https://OshTech.github.io/OshTech/swagger-ui/" target="_blank">API </a></li>
                   <li><a href="https://OshTech.github.io/OshTech/docs/#/" target="_blank">Documentation </a></li>
                 </ul>
