--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
               <li> <a href="#">Developers </a>
                 <ul class="nav-dropdown">
                   <li><a href="https://github.com/gavbdheiver/anomaly-detection" target="_blank"> Source Code </a></li>
-                  <li><a href="https://OshTech.github.io/OshTech/swagger-ui/" target="_blank">API </a></li>
-                  <li><a href="https://OshTech.github.io/OshTech/docs/#/" target="_blank">Documentation </a></li>
+                  <li><a href="https://github.com/gavbdheiver/anomaly-detection" target="_blank">API </a></li>
+                  <li><a href="https://github.com/gavbdheiver/anomaly-detection" target="_blank">Documentation </a></li>
                 </ul>
               </li>
             </ul>
