--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
               </li>
               <li> <a href="#">Developers </a>
                 <ul class="nav-dropdown">
-                  <li><a href="https://github.com/gavbdheiver/anomaly-detection" target="_blank"> Source Code </a></li>
-                  <li><a href="https://github.com/gavbdheiver/anomaly-detection" target="_blank">API </a></li>
+                  <li><a href="https://github.com/gavbdheiver/anomaly-detection" target="_blank"> Source Code 1</a></li>
+                  <li><a href="https://github.com/gavbdheiver/aws-predictive-maintenance-using-machine-learning-master"_blank">Source Code 2</a></li>
                   <li><a href="https://github.com/gavbdheiver/anomaly-detection" target="_blank">Documentation </a></li>
                 </ul>
               </li>
