--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
           </div>
           <div class="nav-menus-wrapper">
             <ul class="nav-menu align-to-right">
-              <li><a href="index.html#product">Product</a></li>
+              <li><a href="index.html#product">Produtos</a></li>
               <li><a href="index.html#discover">Discover</a></li>
 
               </li>
-              <li> <a href="#">Developers </a>
+              <li> <a href="#">Programas </a>
                 <ul class="nav-dropdown">
-                  <li><a href="https://github.com/gavbdheiver/anomaly-detection" target="_blank"> Source Code 1</a></li>
-                  <li><a href="https://github.com/gavbdheiver/aws-predictive-maintenance-using-machine-learning-master"_blank">Source Code 2</a></li>
-                  <li><a href="https://github.com/gavbdheiver/azure-iot-predictive-maintenance-master"_blank">Source Code 3</a></li>
+                  <li><a href="https://github.com/gavbdheiver/anomaly-detection" target="_blank"> Código Fonte 1 </a></li>
+                  <li><a href="https://github.com/gavbdheiver/aws-predictive-maintenance-using-machine-learning-master"_blank">Código Fonte 2</a></li>
+                  <li><a href="https://github.com/gavbdheiver/azure-iot-predictive-maintenance-master"_blank">Código Fonte 3</a></li>
                 </ul>
               </li>
             </ul>
@@ -52,9 +52,9 @@
     <div class="container">
       <div class="row">
         <div class="col-xl-6 col-lg-7 col-md-8 col-12"><br><br>
-          <h1><span>Connect anything</span> <br>
-            Change everything</h1>
-          <h6>TRANSFORM YOUR WORLD WITH SMART CONNECTED PRODUCTS AND NEW EXPERIENCES</h6>
+          <h1><span>Conecte qualquer coisa</span> <br>
+            Mudar tudo</h1>
+          <h6>TRANSFORME SEU MUNDO COM PRODUTOS SMART CONECTANDO COM NOVAS EXPERIÊNCIAS</h6>
           <a href="index.html#install" class="wow pluse" data-wow-duration=".5" data-wow-delay="5s" data-wow-iteration="4">Get Started</a> </div>
       </div>
     </div>
@@ -62,17 +62,16 @@
 </section>
 <div class="element"></div>
 <!--header end here-->
-<a name="product"></a>
+<a name="Produtos"></a>
 <section class="what">
   <div id="what-net"></div>
   <div class="container">
 <div class="what-inner text-left">
     <div class="row">
       <div class="col-md-12">
-        <h3>What is the OshTech IoT Platform?</h3>
-        <h5>Prevent machine failures and make downtime a thing of the past with guaranteed Machine Health diagnostics. We’ll provide you actionable alerts to help your team know what to fix, and how to fix it, at the earliest sign of any developing malfunction. 
-          Our platform removes communication barriers between your teams with online collaboration tools and gives you the data and insights you need to transition to Condition-based Maintenance.
-
+        <h3>O que a plataforma IoT da OshTech faz?</h3>
+        <h5>Evite falhas de máquina e torne o tempo de inatividade uma coisa do passado com diagnósticos garantidos de integridade da máquina. Forneceremos alertas acionáveis para ajudar sua equipe a saber o que corrigir e como corrigi-lo ao primeiro sinal de qualquer mau funcionamento em desenvolvimento.
+           Nossa plataforma remove as barreiras de comunicação entre suas equipes com ferramentas de colaboração online e fornece os dados e informações que você precisa para fazer a transição para a manutenção baseada em condições.
     </h5><br><br>
       </div>
     </div>
@@ -82,13 +81,13 @@
         <div class="col-md-12">
           <h3>Status and features</h3>
           <h5><div class="text-left">
-            OshTech provides you with a state-of-the-art backbone for your IoT fleet:<br><br>
-            <li>Guaranteed Machine Health Diagnostics</li>
-            <li>Designed and Supported by Experts</li>
-            <li>Recommended by World Leading Manufacturers</li>
-            <li>Highest Usability: Getting started with a few commands and very easy and at low-cost to operate</li></h5></div>
-            <h4>OshTech is the world’s first Open Source IoT platform to leverage Cloud Native technologies with Kubernetes and Apache Kafka® as first class citizens -
-            IoT has never been easier!</h4>
+            A OshTech fornece a você um backbone de última geração para seu sistema de IoT:<br><br>
+            <li>Diagnóstico de integridade da máquina garantido</li>
+            <li>Projetado e apoiado por especialistas</li>
+            <li>Recomendado por fabricantes líderes mundiais</li>
+            <li>Maior usabilidade: Começando com poucos comandos e muito fácil e de baixo custo para operar</li></h5></div>
+            <h4>A OshTech é a primeira plataforma IoT de código aberto do mundo a alavancar as tecnologias Cloud Native com Kubernetes e Apache Kafka® como cidadãos de primeira classe -
+             IoT nunca foi tão fácil!</h4>
           </div>
 
    
