--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
           </div>
 
    
-<h3><br><br>With leading industry features - built-in</h3>
+<h3><br><br>Com recursos líderes do setor - integrados</h3>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-sm-6 col-12  d-flex">
           <div class="box text-center">
             <div class="box-inner"> <img src="images/a-4_03.png" class="img-fluid" alt="">
               <h6>Device Management</h6>
-              <p>Powerful but simple framework to visualize clusters of devices within your organization and set permissions up to device level</p>
+              <p>Powerful estrutura simples para visualizar clusters de dispositivos em sua organização e definir permissões até o nível do dispositivo</p>
             </div>
           </div>
         </div>
@@ -105,7 +105,7 @@
           <div class="box text-center">
             <div class="box-inner"> <img src="images/a-5_03.png" class="img-fluid" alt="">
               <h6>Device Shadow</h6>
-              <p>Real-time and two-way correspondence for every device in your fleet. Our highly-scalable backend can power millions of devices</p>
+              <p>Correspondência bidirecional e em tempo real para cada dispositivo em sua empresa. Nosso back-end altamente escalável pode alimentar milhões de dispositivos</p>
             </div>
           </div>
         </div>
@@ -113,15 +113,15 @@
           <div class="box text-center">
             <div class="box-inner"> <img src="images/a-6_03.png" class="img-fluid" alt="">
               <h6>Asset Monitoring</h6>
-              <p>Some statistics about your device fleet at your chosen level of abstractions. Detect problems quickly and at a glance</p>
+              <p>Algumas estatísticas sobre sua frota de dispositivos no nível de abstração escolhido. Detecte problemas rapidamente e rapidamente</p>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-12 d-flex">
           <div class="box text-center">
             <div class="box-inner"> <img src="images/anione.jpg" class="img-fluid" alt="">
-              <h6>Timeseries Visualization</h6>
-              <p>Great telemetry is based on timeseries. OshTech has timeseries data capabilities built-in and enables meaningful monitoring</p>
+              <h6>Visualização de séries temporais</h6>
+              <p>A grande telemetria é baseada em séries temporais. A OshTech possui recursos de dados de série temporal integrados e permite um monitoramento significativo</p>
             </div>
           </div>
         </div>
@@ -130,8 +130,8 @@
           <div class="box text-center">
             <div class="box-inner"> <img src="images/aaa.png" class="img-fluid" alt="">
               <h6>Virtual Twins</h6>
-              <p>A virtual twin is the digital copy of your physical asset. OshTech provides virtual twins which give you the possibility to modify your physical device
-                without even touching it</p>
+              <p>Avirtual twin é a cópia digital do seu ativo físico. A OshTech fornece Avirtual twin que lhe dão a possibilidade de modificar seu dispositivo físico
+                 sem sequer tocá-lo</p>
             </div>
           </div>
         </div>
@@ -139,8 +139,8 @@
           <div class="box text-center">
             <div class="box-inner"> <img src="images/a-2_03.png" class="img-fluid" alt="">
               <h6>Cloud Native</h6>
-              <p>OshTech is portable Cloud Native Software - we leverage the most modern approach to make the setup, operation and relocation of a fleet or even a complete
-                installation easy and reliable. This was never done before</p>
+              <p>OshTech é um software nativo em nuvem portátil - aproveitamos a abordagem mais moderna para fazer a configuração, operação e realocação de uma frota ou até mesmo uma completa
+                 instalação fácil e confiável. Isso nunca foi feito antes</p>
             </div>
           </div>
         </div>
@@ -148,8 +148,8 @@
           <div class="box text-center">
             <div class="box-inner"> <img src="images/uimg-12_03.png" class="img-fluid" alt="">
               <h6>Hybrid Cloud</h6>
-              <p>OshTech has the unique capacity to run in different locations simultaneously. This makes complex and vulnerable installations a thing of
-                the past and gives the freedom to build the future</p>
+              <p>A OshTech tem a capacidade única de funcionar em diferentes locais simultaneamente. Isso torna instalações complexas e vulneráveis
+                 o passado e dá a liberdade de construir o futuro</p>
              </div>
           </div>
         </div>
@@ -164,36 +164,36 @@
           <div class="col-xl-6 col-lg-6 col-md-12 col-12">
             <img src="images/1infra.png" class="img-fluid">
               <h4> Electric grids </h4>
-              <p>Smart grids and intelligent infrastructure are the backbone of the upcoming energy transition.
-                OshTech makes your long-lasting assets smart without driving cost or complexity. Monitoring low-voltage grids, managing high-voltage transformators or
-                performing complex switch scenarios - the platform excels equally driven by the team’s deep experience in utility and energy distribution companies.
-                Remember, the founder have build the backbone of Europe’s Energy Revolution.<br><br></p>
+              <p>Smart grids e infraestrutura inteligente são a espinha dorsal da próxima transição energética.
+                 A OshTech torna seus ativos duradouros inteligentes sem aumentar o custo ou a complexidade. Monitoramento de redes de baixa tensão, gerenciamento de transformadores de alta tensão ou
+                 realizando cenários complexos de comutação - a plataforma se destaca igualmente impulsionada pela profunda experiência da equipe em empresas de serviços públicos e de distribuição de energia.
+                 Lembre-se, o fundador construiu a espinha dorsal da Revolução Energética da Europa.<br><br></p>
           </div>
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-12">
             <img src="images/1energy.png" class="img-fluid">
             <h4> Renewables</h4>
-            <p> Operating renewable energy systems like Windmills, Solar Farms, Biomass or CHP assets generate large amount of telemetry data, which can establish new business models by combining with
-              ML and AI technology to gain better insights to predict maintenance and optimizes profit. To handle that data needs a new operating and management model to make use of the generated data.
-              OshTech enables real data-driven business models and gives the confidence to manage large and costly assets in a cost-efficient and reliable way.<br><br>
+            <p> A operação de sistemas de energia renovável como moinhos de vento, fazendas solares, biomassa ou ativos de CHP geram grande quantidade de dados de telemetria, que podem estabelecer novos modelos de negócios combinando com
+               Tecnologia ML e AI para obter melhores insights para prever a manutenção e otimizar o lucro. Para lidar com esses dados é necessário um novo modelo operacional e de gestão para fazer uso dos dados gerados.
+               A OshTech permite modelos de negócios reais orientados por dados e dá a confiança necessária para gerenciar ativos grandes e caros de maneira econômica e confiável.<br><br>
             </p>
           </div>
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-12">
           <img src="images/1auto.png" class="img-fluid">
             <h4> Automotive</h4>
-            <p>Connected and self-driving cars, advanced robots, autonomous drones, smart cities and interconnected railroads - OshTech can power all of them.
-              We solve the greatest challenge of this automated and interconnected world: reliable and secure connectivity. The upcoming communication revolution
-              (5G, IIoT, NFRB) enables real-time (RTS) data-processing in complex networks. Built for low latency, data QoS and high data ingest, OshTech is the
-              work horse for everything you want to build.<br><br></p>
+            <p>Carros conectados e autônomos, robôs avançados, drones autônomos, cidades inteligentes e ferrovias interconectadas - a OshTech pode alimentar todos eles.
+               Resolvemos o maior desafio deste mundo automatizado e interconectado: conectividade confiável e segura. A próxima revolução da comunicação
+               (5G, IIoT, NFRB) permite o processamento de dados em tempo real (RTS) em redes complexas. Construída para baixa latência, QoS de dados e alta ingestão de dados, a OshTech é a
+               cavalo de trabalho para tudo que você quer construir.<br><br></p>
           </div>
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-12">
           <img src="images/a-2_03.png" class="img-fluid">
             <h4> Industry </h4>
-            <p> Monitoring and storing telemetry data of large production lines spread over thousands of miles across a continent makes predictive maintenance, workers safety tracking and geological irregulation detection challenging.
-              OshTech enables fraction- and hassle-free data transmission even with disturbed data connection lines like LTE, 3G, LoRa or SigFox. Our system can handle time series even independently from transmission date,
-              which enables a whole industry to become truly digitally driven. </p>
+            <p> Monitorar e armazenar dados de telemetria de grandes linhas de produção espalhadas por milhares de quilômetros em um continente torna a manutenção preditiva, o rastreamento de segurança dos trabalhadores e a detecção de irregularidades geológicas um desafio.
+               A OshTech permite a transmissão de dados sem frações e sem complicações, mesmo com linhas de conexão de dados perturbadas, como LTE, 3G, LoRa ou SigFox. Nosso sistema pode lidar com séries temporais mesmo independentemente da data de transmissão,
+               que permite que toda uma indústria se torne verdadeiramente digital. </p>
           </div>
         </div>
 </div>
@@ -204,7 +204,7 @@
       <div class="row">
         <div class="col-md-6 col-sm-12">
           <h3>Install and Setup</h3>
-          <p><br>Installing OshTech IoT takes you less than a minute. Maintenance and updates are managed by the Kubernetes Operator which saves valuable time in operations and maintenance. No matter if you are building smart products or leverage IoT devices to improve your processes, OshTech integrates seamlessly into your software development landscape. Use either our managed cloud offering or install OshTech in your own infrastructure. OshTech runs everywhere, even without Kubernetes. </p>
+          <p><br>A instalação da OshTech IoT leva menos de um minuto. A manutenção e as atualizações são gerenciadas pelo operador do Kubernetes, o que economiza tempo valioso em operações e manutenção. Não importa se você está criando produtos inteligentes ou aproveitando dispositivos IoT para melhorar seus processos, a OshTech se integra perfeitamente ao seu cenário de desenvolvimento de software. Use nossa oferta de nuvem gerenciada ou instale a OshTech em sua própria infraestrutura. A OshTech funciona em todos os lugares, mesmo sem o Kubernetes. </p>
           <a href="https://OshTech.github.io/OshTech/docs/#/" target="_new">Read more</a>
         </div>
         <div class="col-md-6 col-sm-12"> <img src="images/asciicast.gif" class="img-fluid" alt=""> </div>
