--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
 
       <div class="row">
         <div class="col-md-12">
-          <h3>Status and features</h3>
+          <h3>Status e recursos</h3>
           <h5><div class="text-left">
             A OshTech fornece a você um backbone de última geração para seu sistema de IoT:<br><br>
             <li>Diagnóstico de integridade da máquina garantido</li>
             <li>Projetado e apoiado por especialistas</li>
             <li>Recomendado por fabricantes líderes mundiais</li>
             <li>Maior usabilidade: Começando com poucos comandos e muito fácil e de baixo custo para operar</li></h5></div>
-            <h4>A OshTech é a primeira plataforma IoT de código aberto do mundo a alavancar as tecnologias Cloud Native com Kubernetes e Apache Kafka® como cidadãos de primeira classe -
+            <h4>A OshTech é a primeira plataforma IoT de código aberto do mundo a alavancar as tecnologias Cloud Native com Kubernetes e Apache Kafka® essas tecnologias são de primeira classe no mundo -
              IoT nunca foi tão fácil!</h4>
           </div>
 
