--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <div class="col-lg-3 col-md-6 col-sm-6 col-12  d-flex">
           <div class="box text-center">
             <div class="box-inner"> <img src="images/a-4_03.png" class="img-fluid" alt="">
-              <h6>Device Management</h6>
-              <p>Powerful estrutura simples para visualizar clusters de dispositivos em sua organização e definir permissões até o nível do dispositivo</p>
+              <h6>Gerenciamento de dispositivo</h6>
+              <p>Poderosa estrutura para visualizar clusters de dispositivos em sua organização e definir permissões até o nível do dispositivo</p>
             </div>
           </div>
         </div>
@@ -112,8 +112,8 @@
         <div class="col-lg-3 col-md-6 col-sm-6 col-12 d-flex">
           <div class="box text-center">
             <div class="box-inner"> <img src="images/a-6_03.png" class="img-fluid" alt="">
-              <h6>Asset Monitoring</h6>
-              <p>Algumas estatísticas sobre sua frota de dispositivos no nível de abstração escolhido. Detecte problemas rapidamente e rapidamente</p>
+              <h6>Monitoramento de ativos</h6>
+              <p>Algumas estatísticas sobre sua frota de dispositivos no nível de abstração escolhido. Detecte problemas rapidamente</p>
             </div>
           </div>
         </div>
@@ -147,9 +147,8 @@
         <div class="col-lg-3 col-md-6 col-sm-6 col-12 d-flex">
           <div class="box text-center">
             <div class="box-inner"> <img src="images/uimg-12_03.png" class="img-fluid" alt="">
-              <h6>Hybrid Cloud</h6>
-              <p>A OshTech tem a capacidade única de funcionar em diferentes locais simultaneamente. Isso torna instalações complexas e vulneráveis
-                 o passado e dá a liberdade de construir o futuro</p>
+              <h6>Nuvem Híbrida</h6>
+              <p>A OshTech tem a capacidade única de funcionar em diferentes locais simultaneamente. Isso torna instalações complexas e vulneráveis em sistemas simples</p>
              </div>
           </div>
         </div>
