--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
           <div class="box text-center">
             <div class="box-inner"> <img src="images/aaa.png" class="img-fluid" alt="">
               <h6>Virtual Twins</h6>
-              <p>Avirtual twin é a cópia digital do seu ativo físico. A OshTech fornece Avirtual twin que lhe dão a possibilidade de modificar seu dispositivo físico
+              <p>Virtual twin é a cópia digital do seu ativo físico. A OshTech fornece Avirtual twin que lhe dão a possibilidade de modificar seu dispositivo físico
                  sem sequer tocá-lo</p>
             </div>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-12  d-flex">
-          <div class="box text-center">
+          <div class="box text-centeAUTOMOTIVEr">
             <div class="box-inner"> <img src="images/a-2_03.png" class="img-fluid" alt="">
               <h6>Cloud Native</h6>
               <p>OshTech é um software nativo em nuvem portátil - aproveitamos a abordagem mais moderna para fazer a configuração, operação e realocação de uma frota ou até mesmo uma completa
@@ -157,12 +157,12 @@
       <div class="discoverone">
         <div class="container">
         <div class="row text-center">
-          <h1>Discover the potential</h1>
+          <h1>Descubra o potencial</h1>
           <div class="row">
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-12">
             <img src="images/1infra.png" class="img-fluid">
-              <h4> Electric grids </h4>
+              <h4> Redes elétricas </h4>
               <p>Smart grids e infraestrutura inteligente são a espinha dorsal da próxima transição energética.
                  A OshTech torna seus ativos duradouros inteligentes sem aumentar o custo ou a complexidade. Monitoramento de redes de baixa tensão, gerenciamento de transformadores de alta tensão ou
                  realizando cenários complexos de comutação - a plataforma se destaca igualmente impulsionada pela profunda experiência da equipe em empresas de serviços públicos e de distribuição de energia.
@@ -171,7 +171,7 @@
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-12">
             <img src="images/1energy.png" class="img-fluid">
-            <h4> Renewables</h4>
+            <h4> Renováveis</h4>
             <p> A operação de sistemas de energia renovável como moinhos de vento, fazendas solares, biomassa ou ativos de CHP geram grande quantidade de dados de telemetria, que podem estabelecer novos modelos de negócios combinando com
                Tecnologia ML e AI para obter melhores insights para prever a manutenção e otimizar o lucro. Para lidar com esses dados é necessário um novo modelo operacional e de gestão para fazer uso dos dados gerados.
                A OshTech permite modelos de negócios reais orientados por dados e dá a confiança necessária para gerenciar ativos grandes e caros de maneira econômica e confiável.<br><br>
@@ -180,7 +180,7 @@
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-12">
           <img src="images/1auto.png" class="img-fluid">
-            <h4> Automotive</h4>
+            <h4> Automotivo</h4>
             <p>Carros conectados e autônomos, robôs avançados, drones autônomos, cidades inteligentes e ferrovias interconectadas - a OshTech pode alimentar todos eles.
                Resolvemos o maior desafio deste mundo automatizado e interconectado: conectividade confiável e segura. A próxima revolução da comunicação
                (5G, IIoT, NFRB) permite o processamento de dados em tempo real (RTS) em redes complexas. Construída para baixa latência, QoS de dados e alta ingestão de dados, a OshTech é a
@@ -189,7 +189,7 @@
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-12">
           <img src="images/a-2_03.png" class="img-fluid">
-            <h4> Industry </h4>
+            <h4> Indústrias </h4>
             <p> Monitorar e armazenar dados de telemetria de grandes linhas de produção espalhadas por milhares de quilômetros em um continente torna a manutenção preditiva, o rastreamento de segurança dos trabalhadores e a detecção de irregularidades geológicas um desafio.
                A OshTech permite a transmissão de dados sem frações e sem complicações, mesmo com linhas de conexão de dados perturbadas, como LTE, 3G, LoRa ou SigFox. Nosso sistema pode lidar com séries temporais mesmo independentemente da data de transmissão,
                que permite que toda uma indústria se torne verdadeiramente digital. </p>
@@ -202,7 +202,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-sm-12">
-          <h3>Install and Setup</h3>
+          <h3>Instalar e configurar</h3>
           <p><br>A instalação da OshTech IoT leva menos de um minuto. A manutenção e as atualizações são gerenciadas pelo operador do Kubernetes, o que economiza tempo valioso em operações e manutenção. Não importa se você está criando produtos inteligentes ou aproveitando dispositivos IoT para melhorar seus processos, a OshTech se integra perfeitamente ao seu cenário de desenvolvimento de software. Use nossa oferta de nuvem gerenciada ou instale a OshTech em sua própria infraestrutura. A OshTech funciona em todos os lugares, mesmo sem o Kubernetes. </p>
           <a href="https://OshTech.github.io/OshTech/docs/#/" target="_new">Read more</a>
         </div>
@@ -216,8 +216,8 @@
       <div class="demand-inner">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h4> OshTech IoT runs on every cloud provider, public, hybrid or on premise </h4>
-            <center>and is successfully tested with:</center><br><br>
+            <h4>A OshTech IoT é executada em todos os provedores de nuvem, públicos, híbridos ou locais </h4>
+            <center>e é testado com sucesso com:</center><br><br>
             </div>
         </div>
         <div class="demand-logo">
@@ -273,7 +273,7 @@
           <div class="footer footer-2">
               <h6>OshTech</h6>
               <ul>
-                  <li><a href="index.html#product">Product</a></li>
+                  <li><a href="index.html#product">Produtos</a></li>
                   <li><a href="index.html#discover">Discover</a></li>
               </ul>
           </div>
@@ -290,7 +290,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>Copyright 2018 - 2021, The <a href="https://github.com/OshTech/" target="_new"> OshTech project</a></p>
+      <p>Copyright 2018 - 2021, The <a href="https://github.com/OshTech/" target="_new"> Projeto OshTech</a></p>
     </div>
   </div>
 </footer>
