--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-12  d-flex">
-          <div class="box text-centeAUTOMOTIVEr">
+          <div class="box text-center">
             <div class="box-inner"> <img src="images/a-2_03.png" class="img-fluid" alt="">
               <h6>Cloud Native</h6>
               <p>OshTech é um software nativo em nuvem portátil - aproveitamos a abordagem mais moderna para fazer a configuração, operação e realocação de uma frota ou até mesmo uma completa
