--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-sm-6 col-12  d-flex">
+        <div class="clearfix"></div>
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12 d-flex">
           <div class="box text-center">
             <div class="box-inner"> <img src="images/a-2_03.png" class="img-fluid" alt="">
               <h6>Cloud Native</h6>
