--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
 
    
-<h3><br><br>Com recursos líderes do setor - integrados</h3>
+<h3><br><br>Com Recursos Líderes do setor - Sistemas Integrados</h3>
       <div class="row">
         <div class="col-lg-3 col-md-6 col-sm-6 col-12  d-flex">
           <div class="box text-center">
@@ -172,7 +172,7 @@
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-12">
             <img src="images/1energy.png" class="img-fluid">
-            <h4> Renováveis</h4>
+            <h4> Fontes de Energia Renováveis</h4>
             <p> A operação de sistemas de energia renovável como moinhos de vento, fazendas solares, biomassa ou ativos de CHP geram grande quantidade de dados de telemetria, que podem estabelecer novos modelos de negócios combinando com
                Tecnologia ML e AI para obter melhores insights para prever a manutenção e otimizar o lucro. Para lidar com esses dados é necessário um novo modelo operacional e de gestão para fazer uso dos dados gerados.
                A OshTech permite modelos de negócios reais orientados por dados e dá a confiança necessária para gerenciar ativos grandes e caros de maneira econômica e confiável.<br><br>
@@ -181,7 +181,7 @@
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-12">
           <img src="images/1auto.png" class="img-fluid">
-            <h4> Automotivo</h4>
+            <h4> Indústria Automotiva</h4>
             <p>Carros conectados e autônomos, robôs avançados, drones autônomos, cidades inteligentes e ferrovias interconectadas - a OshTech pode alimentar todos eles.
                Resolvemos o maior desafio deste mundo automatizado e interconectado: conectividade confiável e segura. A próxima revolução da comunicação
                (5G, IIoT, NFRB) permite o processamento de dados em tempo real (RTS) em redes complexas. Construída para baixa latência, QoS de dados e alta ingestão de dados, a OshTech é a
@@ -190,7 +190,7 @@
 
           <div class="col-xl-6 col-lg-6 col-md-12 col-12">
           <img src="images/a-2_03.png" class="img-fluid">
-            <h4> Indústrias </h4>
+            <h4> Indústrias em Geral</h4>
             <p> Monitorar e armazenar dados de telemetria de grandes linhas de produção espalhadas por milhares de quilômetros em um continente torna a manutenção preditiva, o rastreamento de segurança dos trabalhadores e a detecção de irregularidades geológicas um desafio.
                A OshTech permite a transmissão de dados sem frações e sem complicações, mesmo com linhas de conexão de dados perturbadas, como LTE, 3G, LoRa ou SigFox. Nosso sistema pode lidar com séries temporais mesmo independentemente da data de transmissão,
                que permite que toda uma indústria se torne verdadeiramente digital. </p>
